k8s/frontend-service.yaml
# kubectl apply -f service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  labels:
    app: landing-page
spec:
  selector:
    app: landing-page
    tier: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000 # port of the service
      targetPort: 3000 # port of the application/pod
