k8s/ingress.yaml
# kubectl apply -f ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  annotations:
    # ingress can provide SSL
    # cert-manager.io/cluster-issuer: letsencrypt-issuer

    # https://docs.nginx.com/nginx-ingress-controller/configuration/ingress-resources/basic-configuration/
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  labels:
    app: sample-app
spec:
  ingressClassName: nginx # use "nginx" if not using microk8s
  rules:
    - host: petahilirisasi.id
      http:
        paths:
          - path: /
            # Prefix: /foo matches /foo and /foo/bar
            # Exact: /foo matches /foo and nothing else
            # ImplementationSpecific: the path type is up to the IngressClass
            pathType: Prefix # can be ImplementationSpecific, Exact
            backend:
              service:
                name: landing-page # must be in same namespace
                port:
                  number: 80 # port of service
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sample-app
                port:
                  number: 80
